feat: movie list page & create movie feature
